STYLE: fix letter spacing

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -256,7 +256,7 @@ header {
 
     & h3 {
         margin: 0 0 1.2rem;
-        letter-spacing: 1rem;
+        letter-spacing: 0.2rem;
         color: var(--primary-color);
         font-weight: 800;
     }
